[package]
name = "craft-eraser"
version = "0.1.0"
edition = "2021"
description = "A set of simple type-erased box primitives"
license = "MIT/Apache-2.0"
repository = "https://github.com/CraftSpider/eraser"
readme = "README.md"
keywords = ["erased", "type erasure", "no_std"]
categories = ["memory-management", "no-std"]
